--- a/index.html
+++ b/index.html
@@ -2,48 +2,62 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
   <title>Frontend Mentor | Interactive rating component</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
+  <div class="wrapper">
 
-  <!-- Rating state start -->
+    <div class="assessment-card">
 
-  How did we do?
-
-  Please let us know how we did with your support request. All feedback is appreciated 
-  to help us improve our offering!
-
-  1 2 3 4 5
-
-  Submit
-
-  <!-- Rating state end -->
-
-  <!-- Thank you state start -->
-
-  You selected <!-- Add rating here --> out of 5
-
-  Thank you!
-
-  We appreciate you taking the time to give a rating. If you ever need more support, 
-  don’t hesitate to get in touch!
-
-  <!-- Thank you state end -->
-
+      <div class="cart-one" id="cart-one">
+        <div class="star">
+          <img src="./images/icon-star.svg" alt="">
+        </div>
   
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+        <div class="text">
+          <h1>How did we do?</h1>
+          <p>Please let us know how we did with your support request. All feedback is appreciated 
+            to help us improve our offering!</p>
+        </div>
+  
+        <div class="grades">
+          <div class="score" id="myDiv">1</div>
+          <div class="score" id="myDiv">2</div>
+          <div class="score" id="myDiv">3</div>
+          <div class="score" id="myDiv">4</div>
+          <div class="score" id="myDiv">5</div>
+        </div>
+  
+        <button id="myButton">SUBMIT</button>
+      </div>
+
+      <div class="cart-two divNone" id="cart-two">
+        <div class="phone-photo">
+          <img src="./images/illustration-thank-you.svg" alt="">
+        </div>
+
+        <div class="rating">
+          <p class="myParagraph" id="myParagraph"></p>
+        </div>
+
+        <div class="text">
+          <h1>Thank you!</h1>
+          <p>We appreciate you taking the time to give a rating. If you ever need more support, 
+            don’t hesitate to get in touch!</p>
+        </div>
+      </div>
+      
+    </div>
+
   </div>
+
+    <script src="./js/app.js"></script>
+    
 </body>
 </html>
